<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.app.myfavouritemovies.ShowByRatingFragment"
    android:id="@+id/showByRating_fragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/first"
        android:id="@+id/imageButtonFirst"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/last"
        android:id="@+id/imageButtonlast"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="Movies by Rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewMovByRating"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/txtViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewTitle"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:layout_below="@+id/textViewMovByRating"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="23dp" />

    <TextView
        android:text="@string/txtViewDescptn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewDescptn"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:layout_below="@+id/textViewTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="32dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewRatingVal"
        android:layout_alignBaseline="@+id/textViewRating"
        android:layout_alignBottom="@+id/textViewRating"
        android:layout_alignLeft="@+id/textViewGenreVal"
        android:layout_alignStart="@+id/textViewGenreVal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewYearVal"
        android:layout_above="@+id/textViewImdb"
        android:layout_alignLeft="@+id/textViewRatingVal"
        android:layout_alignStart="@+id/textViewRatingVal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewGenreVal"
        android:layout_alignBaseline="@+id/textViewGenre"
        android:layout_alignBottom="@+id/textViewGenre"
        android:layout_alignLeft="@+id/textViewDescVal"
        android:layout_alignStart="@+id/textViewDescVal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewDescVal"
        android:layout_alignBaseline="@+id/textViewDescptn"
        android:layout_alignBottom="@+id/textViewDescptn"
        android:layout_alignLeft="@+id/textViewTitleVal"
        android:layout_alignStart="@+id/textViewTitleVal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewTitleVal"
        android:layout_alignBaseline="@+id/textViewTitle"
        android:layout_alignBottom="@+id/textViewTitle"
        android:layout_alignLeft="@+id/textViewMovByRating"
        android:layout_alignStart="@+id/textViewMovByRating" />

    <TextView
        android:text="@string/txtViewGenre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewGenre"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="45dp"
        android:layout_below="@+id/textViewDescptn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/txtViewRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewRating"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/txtViewImdb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewImdb"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="36dp"
        android:layout_below="@+id/textViewYear"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/txtViewYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewYear"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="33dp"
        android:layout_below="@+id/textViewRating"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewImdbVal"
        android:layout_below="@+id/textViewImdb"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="23dp" />

    <ImageView
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/previous"
        android:id="@+id/imageButtonPrevious"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/textViewRating"
        android:layout_alignTop="@+id/imageButtonFirst" />

    <ImageView
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/next"
        android:id="@+id/imageButtonNext"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/textViewMovByRating"
        android:layout_toEndOf="@+id/textViewMovByRating" />

    <Button
        android:text="@string/btnFinish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonFinish"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>


    </FrameLayout>
